# Edge_RAG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  download_models.py  error&resolve.md  requirements.txt
.github/workflows/: build.yml
src/: inference.cpp  inference.hpp  llm_engine.cpp  llm_engine.hpp  main.cpp  rag_engine.cpp  rag_engine.hpp  ui.cpp  ui.hpp
